--- a/web/login.html
+++ b/web/login.html
@@ -9,7 +9,7 @@
   <div class="container">
     <h2>Login</h2>
     <form id="loginform" action="login" method="post">
-      <input id="email" type="text" name="email" placeholder="Usuário" required>
+      <input id="email" type="text" name="email" placeholder="E-mail" required>
       <input id="password" type="password" name="password" placeholder="Senha" required>
       <button type="submit">Entrar</button>
     </form>
